# Bidding

./: .gitignore  README.md  pyproject.toml  sites.txt
config/: settings.yaml
config/sites/: chnenergy.yaml
src/bidding/: __main__.py  cli.py
src/bidding.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/bidding/adapters/: base.py  cebpubservice.py  ceec.py  cgnpc.py  china_an.py  chinabidding.py  chnenergy.py  chng.py  cnnc.py  ctg.py  espic.py  hebztb.py  hydl.py  iccec.py  jn.py  jnkg.py  jxic.py  lxjypt.py  nxgyzb.py  powerchina.py  registry.py  sdicc.py  sgcc_ecp.py  sgcc_etp.py  xd_eps.py
src/bidding/core/: dedup.py  detail_fetcher.py  engine.py  pipeline.py
src/bidding/models/: db.py  enums.py  schema.py
src/bidding/storage/: database.py  repository.py
src/bidding/utils/: captcha.py  doc.py
src/bidding/web/: app.py
src/bidding/web/templates/: detail.html  index.html
