[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bidding"
version = "0.1.0"
description = "招标信息智能采集系统"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "typer>=0.9",
    "pyyaml>=6.0",
    "structlog>=23.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]

[project.scripts]
bidding = "bidding.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
